k8s/drone/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: drone
  labels:
    name: drone
