k8s/drone/drone.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-deployment
  namespace: drone
  labels:
    app: drone-deployment
    # keel.sh/policy: force
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-deployment
  template:
    metadata:
      labels:
        app: drone-deployment
    spec:
      containers:
      - name: drone-deployment
        image: drone/drone:2
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  namespace: drone
  name: drone-deployment-service
spec:
  selector:
    app: drone-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: drone
  name: drone-deployment-ingress
spec:
  rules:
  - host: "drone.voidcorp.nl"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: drone-deployment-service
            port: 
              number: 80
